classDiagram
    class MainActivity {
        onCreate()
    }

    class AsciiPreviewScreen {
        scaleFactor: Int
        contrastFactor: Float
        colorEnabled: Boolean
        displayMode: AsciiDisplayMode
        selectedTab: Int
    }

    class CameraAnalysisPipeline {
        onFrameProcessed()
    }

    class CameraFrameAnalyzer {
        scaleFactorProvider()
        contrastFactorProvider()
        colorEnabledProvider()
        displayModeProvider()
        onFrameProcessed()
        analyze(image: ImageProxy)
    }

    class ExoPlayerVideoFileTab {
        scaleFactor: Int
        contrastFactor: Float
        colorEnabled: Boolean
        displayMode: AsciiDisplayMode
    }

    class ExoPlayerFrameListener {
        startListening()
        stopListening()
        release()
        refreshCurrentFrame()
        -pollForFrames()
        -captureFrameToQueue()
        -processQueuedFrames()
    }

    class FrameQueueState {
        detectPlaybackRestart(currentTimeMs)
        shouldQueueFrame(currentTimeMs, skipRate)
        recordQueuedFrame(frameTimeMs)
    }

    class ImageProcessor {
        +processLiveCameraFrame()$
        +processVideoFileFrame()$
        -displayBitmapFor()$
        -yuvToArgb()$
    }

    class RotationMap {
        base: Int
        stepX: Int
        stepY: Int
        destWidth: Int
        destHeight: Int
    }

    class FrameProcessingResult {
        displayBitmap: Bitmap?
        asciiText: String
        asciiColors: PixelGrid?
        gridSize: GridSize
    }

    class GridSize {
        width: Int
        height: Int
        cellCount: Int
    }

    class PixelGrid {
        <<immutable>>
        size: GridSize
        +get(x, y)
        +getOrNull(x, y)
    }

    class PixelBuffer {
        size: GridSize
        +prepare(size)
        +freeze() PixelGrid
        +pixelsForPlatformApi: IntArray
    }

    class AsciiArt {
        +toAsciiText(grayscalePixels, size)$
        -glyphForIntensity: CharArray
        -buildSortedCharset()$
    }

    class AsciiDisplayMode {
        <<enum>>
        IMAGE
        ASCII
    }

    MainActivity --> AsciiPreviewScreen
    AsciiPreviewScreen --> CameraAnalysisPipeline
    AsciiPreviewScreen --> ExoPlayerVideoFileTab
    AsciiPreviewScreen --> AsciiDisplayMode
    CameraAnalysisPipeline --> CameraFrameAnalyzer
    CameraFrameAnalyzer --> ImageProcessor
    ExoPlayerVideoFileTab --> ExoPlayerFrameListener
    ExoPlayerFrameListener --> FrameQueueState
    ExoPlayerFrameListener --> ImageProcessor
    ImageProcessor --> RotationMap
    ImageProcessor --> FrameProcessingResult
    ImageProcessor --> AsciiArt
    ImageProcessor --> PixelBuffer
    PixelBuffer ..> PixelGrid : freeze() copies
    PixelBuffer --> GridSize
    PixelGrid --> GridSize
    FrameProcessingResult --> PixelGrid
    FrameProcessingResult --> GridSize
